# rustypages

./: Cargo.toml  FEATURES.md  README.md
src/: builder.rs  commands.rs  config.rs  file.rs  lib.rs  main.rs  pipeline.rs  writer.rs
src/pipeline/: context.rs  error.rs  stage.rs  stages.rs
src/pipeline/stages/: load_config.rs  load_templates.rs
src/template/: registry.rs
src/template_files/: README.md  rustypages.toml
tests/: integration.rs
