[package]
name = "rustypages"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
include_dir = "0.7.4"
minijinja = "2.9.0"
pulldown-cmark = { version = "0.13.0", features = ["html"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[dev-dependencies]
tempfile = "3"
